Commitid_2"changed html file and added note that uploaded via vs to github

--- a/ResumeGenerator3.html
+++ b/ResumeGenerator3.html
@@ -189,5 +189,5 @@ sed eaque labore voluptate amet debitis beatae at porro, nemo placeat ut cumque 
 <script src="D:\sublimefiles\ResumeBuilderProject\resumeGScript.js"></script>
 </body>
 
-
+<!-- uploaded file via vs to github-->
 </html>
